--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,3 @@
 <div class="row header"></div>
-<div ng-repeat="row in rows" class="row">
-	<div class="span1"></div>
-	<ul class="thumbnails">
-		<li ng-repeat="identicon in row" class="span2">
-			<div class="thumbnail">
-				<img ng-src={{identicon}}/>
-			</div>
-		</li>
-	</ul>
-	</div class="span1"></div>
-</div>
+<identicons-grid rows="rows"></identicons-grid>
 <div class="row footer"></div>
